ONOS-4359: continued work on theming UI - topo view: fixed internal spacing (padding) of summary and details panels.

--- a/web/gui/src/main/webapp/app/fw/widget/button-theme.css
+++ b/web/gui/src/main/webapp/app/fw/widget/button-theme.css
@@ -23,7 +23,7 @@
 .light .button svg.embeddedIcon .icon rect,
 .light .toggleButton.selected svg.embeddedIcon .icon rect,
 .light .radioButton.selected svg.embeddedIcon .icon rect {
-    fill: #838383;
+    fill: #939598;
 }
 
 .light .button:hover svg.embeddedIcon .icon rect,
